--- a/src/AntiPlagiarism.UpdateDb/appsettings.json
+++ b/src/AntiPlagiarism.UpdateDb/appsettings.json
@@ -5,7 +5,7 @@
         "console": true,
         "pathFormat": "logs/log-{Date}.log",
         "minimumLevel": "debug",
-        "enableEntityFrameworkLogging": true
+        "enableEntityFrameworkLogging": false
     },
     
     "antiplagiarism": {
