--- a/src/uLearn.Tests/packages.config
+++ b/src/uLearn.Tests/packages.config
@@ -18,14 +18,25 @@
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.7.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.7.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.0-rc1-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0-rc1-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0-rc1-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.0-rc1-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.1.0-rc1-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.0-rc1-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.0-rc1-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.0-rc1-final" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0-rc1-final" targetFramework="net47" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net47" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
   <package id="NHunspell" version="1.2.5554.16953" targetFramework="net47" />
   <package id="NUnit" version="3.10.1" targetFramework="net47" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Immutable" version="1.5.0-preview2-26406-04" targetFramework="net47" />
@@ -46,9 +57,11 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Linq" version="4.3.0" targetFramework="net47" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net47" />
+  <package id="System.Memory" version="4.5.0-rc1" targetFramework="net47" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net47" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net47" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net47" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net47" />
@@ -56,6 +69,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0-rc1" targetFramework="net47" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net47" />
@@ -80,4 +94,5 @@
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net47" />
+  <package id="UnidecodeSharpCore" version="1.0.0" targetFramework="net47" />
 </packages>
